--- a/profile1.htm
+++ b/profile1.htm
@@ -1,9 +1,9 @@
 <html>
     <head>
-        <title>JavaScript sample code</title>
+        <title>Metal sheet and profile calculation</title>
     </head>
     <body>
-        <h1>My Sample Code</h1>
+        <h1>Metal sheet and profile calculation</h1>
         <input type="checkbox" id="metalsheet" onclick="metalsheet()" />
         <label for="metal sheet ">Metal Sheet </label>
         <input type="checkbox" id="roundbar" onclick="roundbar()" />
@@ -211,7 +211,6 @@ function roundbar() {
     scrie.innerHTML += 'Round Bar Total weight kg=' + weight + " Length=" + length + " Diameter=" + diameter + " Pieces=" + pieces + '<br>';
     document.getElementById('roundbar').checked = false;
 }
-
         </script>
     </body>
 </html>
