--- a/profile1.htm
+++ b/profile1.htm
@@ -7,7 +7,7 @@
         	label { color:brown ;
                         background-color:orange }
             select { color:brown ;
-                        background-color;yellow;  }
+                        background-color:yellow;  }
             input {color:blue;
                         background-color:yellow;}      
                  
