--- a/profile1.htm
+++ b/profile1.htm
@@ -1,6 +1,16 @@
 <html>
     <head>
         <title>JavaScript sample code</title>
+	    <style >
+
+            body {	background-color:brown}
+        	label { color:brown ;
+                        background-color:orange }
+            select { color:brown ;
+                        background-color:yellow;  }
+            input {color:blue;
+                        background-color:yellow;}      
+
     </head>
     <body>
         <h1>Calculation Metal Profile</h1>
