--- a/profile1.htm
+++ b/profile1.htm
@@ -30,7 +30,7 @@
         <input type="radio" id="upe" onclick="Upe.drawForm()" name="profil"/>
         <label for="upe" style='background-color:yellow'>Profile UPE</label>
         <input type="radio" id="hex" onclick="Hexagonal.drawForm()" name="profil"/>
-        <label for="hex" style='background-color:Khaki'>Profile HEX</label>
+        <label for="hex" style='background-color:Khaki'>Profile Hexagonal</label>
         <button onclick="window.print()">Print</button><br/><br/>
 
         <p id="form"></p>
